# scaffold-params

./: .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  build.sh  build_image.sh  docker-compose.yaml  dotenv.sample  example.py  gitpip.sh  pyproject.toml  quickstart.sh  requirements.txt
app/: base_params.py  config.py  dotenv_reader.py  exception_throwing_parser.py  logger_factory.py  params_mixin.py
conf/: example.yaml  logger.yaml
samples/: basic.py
samples/conf/: basic.yaml
scaffold/: base_params.py  logger_factory.py
scaffold/mixins/: jinja_template_mixin.py  now_mixin.py
src/scaffold/: __init__.py  base_params.py
src/scaffold/debug/: __init__.py  _printf_debug.py  ansi_color_codes.py  trace_class_decorator.py
src/scaffold/mixins/: logger_init_mixin.py
src/scaffold/params/: __init__.py  base_mixin.py  base_params.py  config.py  envtag.py  logger_factory.py  logger_initializer.py
src/scaffold/params/mixins/: __init__.py  base_mixin.py  jinja_template_mixin.py  logger_init_mixin.py  logger_initializer_mixin.py  now_mixin.py
src/scaffold/samples/: basic.py
src/scaffold/samples/conf/: basic.yaml  logger.yaml
src/scaffold/samples/templates/: basic.j2
