[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyapp-scaffold"
version = "0.0.1"
authors = [
  { name="Dustin Lennon", email="dustin.lennon@gmail.com" },
]
description = "Tools for easy parameter specification"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/dustinlennon/pyapp-scaffold"
Issues = "https://github.com/dustinlennon/pyapp-scaffold/issues"