[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold"
version = "0.0.1"
authors = [
  { name="Dustin Lennon", email="dustin.lennon@gmail.com" },
]
description = "Tools for easy parameter specification"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "jinja2>=3.1.6",
  "pytz>=2025.1",
  "pyyaml>=6.0.2"
]

[project.urls]
Homepage = "https://github.com/dustinlennon/scaffold"
Issues = "https://github.com/dustinlennon/scaffold/issues"